Add new TT button, undid CSS fixes [TODO]

--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ header .alert {
   width: 80%;
 }
 
-#option_buttons .btn {
+/*#option_buttons .btn {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-}
+}*/
 
 #timetable .table {
   margin-bottom: 0!important;
@@ -97,10 +97,10 @@ footer {
   background-color: white;
 }
 
-
+/* TODO: Fix apparent collapsing of buttons. */
 /* remove collapse of button in #option_buttons and add scroll on overflow */
 
-#option_buttons {
+/*#option_buttons {
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -108,7 +108,7 @@ footer {
 #option_buttons .btn {
   float: none;
   display: inline-block;
-}
+}*/
 
 .screenshot_msg tr,
 .screenshot_msg td {
